fix findBugs warnings to use more efficient code constructs (valueOf)
git-svn-id: https://svn.cesecore.eu/svn/ejbca/trunk@4478 37aeb1de-b14b-0410-9a0e-82b28170d228